
[project.optional-dependencies]
test = [
    "coverage>5.2",
    "codecov>=2.1",
    "pytest==6.*",
    "pytest-cov>2.10",
    "pytest-doctestplus>=0.9.0",
    "check-manifest",
    "twine>=3.2",
    "mypy>=0.790",
    "phmdoctest>=1.1.1",
    "pytest-sugar",
    "black",
    "isort",
]


[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "mdlu/_version.py"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39"]

[bdist_wheel]
universal = 1
