[project]
dynamic = ["version"]
name = "medical_dl_utils"
description = "Helpful utilities for deep learning in medical image analysis/medical image computing"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["deep learning", "machine learning", "pytorch", "medical", "healthcare", "AI"]
authors = [
  {email = "justus.schock@posteo.de"},
  {name = "Justus Schock"}
]
maintainers = [
  {name = "Justus Schock", email = "justus.schock@posteo.de"}
]
classifiers = [
  "Programming Language :: Python :: 3"
]

dependencies = [
    "torch >= 1.9, <=1.11",
    "psutil <= 5.9.1",
    "torchio > 0.18.56, <=0.18.78",
    "pytorch-lightning >=1.5, <=1.6.4",
    "monai >=0.7, <=0.8.1"
]

[project.optional-dependencies]
test = [
  "pytest",
  "coverage"
]

[project.urls]
"Homepage" = "https://github.com/justusschock/medical-dl-utils"
"Repository" = "https://github.com/justusschock/medical-dl-utils"
"Bug Reports" = "https://github.com/justusschock/medical-dl-utils/issues"

[build-system]
requires = [
    "setuptools>=62",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "mdlu.__version__"}

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39"]

[tool.distutils.bdist_wheel]
universal = true

[bdist_wheel]
universal = 1
