[project]
dynamic = ["version"]
name = "medical_data"
description = "Helpful data utilities for deep learning in medical image analysis/medical image computing"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["deep learning", "machine learning", "pytorch", "medical", "healthcare", "AI"]
authors = [
  {email = "justus.schock@posteo.de"},
  {name = "Justus Schock"}
]
maintainers = [
  {name = "Justus Schock", email = "justus.schock@posteo.de"}
]
classifiers = [
  "Programming Language :: Python :: 3"
]

dependencies = [
    "torch >= 1.9, < 3.0",
    "psutil < 5.9.2",
    "torchio > 0.18.56, < 0.19.2",
    "lightning >= 2.0, < 3.0",
    "lightning-utilities >=0.5, <0.9",
    "monai >= 0.7, < 1.1.1",
    "loguru == 0.7.0",
    "psutil < 5.9.6",
    "torchio > 0.18.56, < 0.19.2",
    "pytorch-lightning >=1.5",
    "loguru >= 0.6.0",
    "pydicom",
    "jsonargparse",
]

[project.optional-dependencies]
test = [
  "pytest",
  "coverage"
]


[project.urls]
"Homepage" = "https://github.com/justusschock/medical-data"
"Repository" = "https://github.com/justusschock/medical-data"
"Bug Reports" = "https://github.com/justusschock/medical-data/issues"

[build-system]
requires = [
    "setuptools>=62",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "medical_data.__version__"}

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.black]
line-length = 120
target_version = ["py38", "py39", "py310", "py311"]

[tool.distutils.bdist_wheel]
universal = true

[bdist_wheel]
universal = 1
