[metadata]
name = medical_dl_utils
version = attr: mdlu.__version__
description = Helpful utilities for deep learning in medical image analysis/medical image computing 
long_description = file: README.rst
author = Justus Schock
author_email = justus.schock@posteo.de
url = https://github.com/justusschock/medical-dl-utils
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, medical, AI
project_urls =
    source = https://github.com/justusschock/medical-dl-utils
    tracker = https://github.com/justusschock/medical-dl-utils/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    torch >= 1.9
    psutil
    torchio > 0.18.56
    pytorch-lightning >=1.5
    monai>=0.7

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
