[metadata]
name = medical_dl_utils
version = attr: mdlu.__version__
description = Helpful utilities for deep learning in medical image analysis/medical image computing
long_description = file: README.md
long_description_content_type = text/markdown
author = Justus Schock
author_email = justus.schock@posteo.de
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE
url = https://github.com/justusschock/medical-dl-utils
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, medical, AI
project_urls =
    source = https://github.com/justusschock/medical-dl-utils
    tracker = https://github.com/justusschock/medical-dl-utils/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    torch >= 1.9,<=1.11
    psutil <= 5.9.1
    torchio > 0.18.56,<=0.18.78
    pytorch-lightning >=1.5,<=1.6.4
    monai >=0.7,<=0.8.1

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
